--- a/asset/shop.html
+++ b/asset/shop.html
@@ -17,7 +17,7 @@
 <body>
     <div class="shop">
         <header>
-            <img src="./images/menu_Icon_right.svg" alt="menu_Icon_right" class="menu_Icon_right">
+            <img src="./images/menu_Icon_left.svg" alt="menu_Icon_left" class="menu_Icon_left">
             <h2>shop</h2>
             <img src="./images/menu_Icon_right.svg" alt="menu_Icon_right" class="menu_Icon_right">
         </header>
