--- a/asset/shop_Categories.html
+++ b/asset/shop_Categories.html
@@ -34,12 +34,18 @@
                 </li>
                 <li>
                     <img src="./images/cart_thumb_02.jpg" alt="02">
+                    <h4>Shoes</h4>
+                    <h5>1.5k Styles</h5>
                 </li>
                 <li>
                     <img src="./images/cart_thumb_03.jpg" alt="03">
+                    <h4>T-shirts</h4>
+                    <h5>2.5k Styles</h5>
                 </li>
                 <li>
                     <img src="./images/cart_thumb_04.jpg" alt="04">
+                    <h4>T-shirts</h4>
+                    <h5>2.5k Styles</h5>
                 </li>
             </ul>
         </div>
